made changes in new page

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         <div class="menu" id="nav-menu">
             <a href="#home">HOME</a>
             <a href="#about">ABOUT US</a>
-            <a href="#work">OUR INITIATIVES</a>
+            <a href="work-section.html">OUR INITIATIVES</a>
             <a href="#contact">CONTACT US</a>
         </div>
     </nav>
