Still trying to get carousel sorted

--- a/work-section.html
+++ b/work-section.html
@@ -6,7 +6,8 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>APB Charitable Trust</title>
-
+  <link rel="stylesheet" href="./css/styles.css">
+  <link rel="stylesheet" href="./css/workstyles.css">
   <!-- Google Fonts -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -16,8 +17,7 @@
   <!-- Font Awesome -->
   <link rel="stylesheet" href="./css/all.min.css">
   <!-- Local Stylesheet -->
-  <link rel="stylesheet" href="./css/styles.css">
-  <link rel="stylesheet" href="./css/workstyles.css">
+
 
 </head>
 
@@ -53,17 +53,125 @@
 
       </div>
       <!-- 2021-NOVEMBER -->
+      <section class="content" id="work-new">
+        <div class="container">
+          <div class="row">
+            <div class="col-md-6 about-text-wrapper">
+              <p class="about-text work-info">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
+                eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis
+                nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+                consequat.</p>
+              <a href="work-section.html" class="button--link">
+                KNOW MORE
+                <i class="fa fa-long-arrow-alt-right" aria-hidden="true">
+                </i>
+              </a>
+            </div>
+            <div class="col-md-6">
+              <img class="work-img" src="./content/work/worksec.png" alt="">
+            </div>
+          </div>
+        </div>
+      </section>
 
 
 
 
       <!-- 2021-OCTOBER-->
+      <section class="content" id="work-new">
+        <div class="container">
+          <div class="row">
+            <div class="col-md-6">
+              <img class="work-img" src="./content/work/worksec.png" alt="">
+            </div>
+            <div class="col-md-6 about-text-wrapper">
+              <h5>OCTOBER</h5>
+              <p class="about-text work-info">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
+                eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis
+                nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+                consequat.</p>
+              <a href="work-section.html" class="button--link">
+                KNOW MORE
+                <i class="fa fa-long-arrow-alt-right" aria-hidden="true">
+                </i>
+              </a>
+            </div>
 
-
-
+          </div>
+        </div>
+      </section>
 
 
       <!-- 2021-SEPTEMBER-->
+
+      <section class="content" id="work-new">
+        <div class="container">
+          <div class="row">
+            <div class="col-md-6 about-text-wrapper">
+              <p class="about-text work-info">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
+                eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis
+                nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+                consequat.</p>
+              <a href="work-section.html" class="button--link">
+                KNOW MORE
+                <i class="fa fa-long-arrow-alt-right" aria-hidden="true">
+                </i>
+              </a>
+            </div>
+            <div class="col-md-6">
+              <!-- <div id="testimonial-carousel" class="carousel slide" data-bs-ride="false">
+                <div class="carousel-inner">
+                  <div class="carousel-item active">
+                    <div class="overlay-image-new" style="background-image:url(./content/work/worksec.png);">
+                    </div>
+                  </div>
+                </div>
+                <div class="carousel-item">
+                  <div class="overlay-image-new" style="background-image:url(./content/For Carousel/img2.jpeg);">
+                  </div>
+                </div>
+                <button class="carousel-control-prev" type="button" data-bs-target="#testimonial-carousel" data-bs-slide="prev">
+                  <span class="carousel-control-prev-icon"></span>
+                </button>
+                <button class="carousel-control-next" type="button" data-bs-target="#testimonial-carousel" data-bs-slide="next">
+                  <span class="carousel-control-next-icon"></span>
+                </button>
+              </div> -->
+              <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+                <ol class="carousel-indicators">
+                  <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+                  <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+                  <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+                </ol>
+                <div class="carousel-inner">
+                  <div class="carousel-item active">
+                    <div class="overlay-image-new" style="background-image:url(./content/For Carousel/img2.jpeg);">
+                    </div>
+                  </div>
+                  <div class="carousel-item">
+                    <div class="overlay-image-new" style="background-image:url(./content/For Carousel/img2.jpeg);">
+                    </div>
+                  </div>
+                  <div class="carousel-item">
+                    <div class="overlay-image-new" style="background-image:url(./content/For Carousel/img2.jpeg);">
+                    </div>                    
+                  </div>
+                </div>
+                <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+                  <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                  <span class="sr-only">Previous</span>
+                </a>
+                <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+                  <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                  <span class="sr-only">Next</span>
+                </a>
+              </div>
+
+            </div>
+          </div>
+        </div>
+      </section>
+
 
 
 
