Update website branding and content for Vijay Social Welfare Society

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="shortcut icon" href="./content/favicon.png" type="image/x-icon">
 
-  <title>APB Charitable Trust</title>
+  <title>Vijay Social Welfare Society</title>
 
   <!-- Global site tag (gtag.js) - Google Analytics -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=G-8T34V449LD"></script>
@@ -58,7 +58,7 @@
   <nav class="shadow-lg">
     <div class="brand">
       <a href="index.html">
-        <img src="./content/logo.png" alt="" srcset="">
+        <img src="./content/logo.png" alt="Logo" style="height: auto !important; min-height: 80px !important; max-height: 150px !important; width: auto !important; max-width: none !important; object-fit: contain !important;">
       </a>
     </div>
     <div class="hamburger">
@@ -81,17 +81,16 @@
       <div class="row justify-content-center align-items-center h-100">
         <div class="col-md-6 h-75 d-flex flex-column justify-content-center" data-aos="fade-down"
           data-aos-duration="10000">
-          <h1 class="home-title"><span style="color: var(--primary-color);">Anti Plastic
-              Brigade</span><br>Charitable Trust</h1>
+          <h1 class="home-title"><span style="color: #c1331b;">Vijay Social Welfare Society</span></h1>
+          <div style="height: 30px;"></div>
+          <h1 class="home-title"><span style="color: #c1331b;">Let's Do Good</span></h1>
           <div class="home-desc">
-            <p>We are an organzation working mainly for solid waste management along with other
-              green
-              endeavours since 2017</p>
-            <a href="#about" class="btn btn-secondary">Get Started</a>
+            <p>The best way to find yourself is to lose yourself in the service of others.</p>
+            <a href="#about" class="btn" style="background-color: #c1331b; color: white;">Get Started</a>
           </div>
         </div>
         <div class="col-md-6 d-none d-md-block" data-aos="flip-up" data-aos-duration="2000">
-          <img class="carousel-img" src="./content/slide/Blue/Throw away 2.png" alt="" srcset="">
+          <img class="carousel-img" src="./content/slide/Blue/ChatGPT Image Apr 3, 2025, 08_52_09 PM.png" alt="" srcset="" style="max-width: 70%; max-height: 70%; margin: 0 auto; display: block;">
         </div>
       </div>
     </div>
@@ -104,33 +103,23 @@
     <div class="container">
       <div class="row">
         <div class="col-lg-5 d-flex flex-column justify-content-center about-text-wrapper">
-          <p class="about-text" data-aos="fade-up" data-aos-delay="200">Anti Plastic Brigade charitable trust
-            is a registered Non Govermental
-            Organzation from the city of Thane working mainly for Solid
-            Waste Management along with other Green Activities since 2017.</p><br>
-          <p class="about-text" data-aos="fade-up" data-aos-delay="300">Waste management reduces the effect of
-            waste on the environment, health, and
-            so on. It can also
-            help reuse or recycle resources, such as; paper, cans, glass, and so on. There is various type
-            of waste management that include the disposal of solid, liquid, gaseous, or hazardous
-            substances.</p><br>
-          <p class="about-text" data-aos="fade-up" data-aos-delay="400">Our organisation strives to create
-            awareness among people about the harmful
-            effects caused by
-            the incorrect disposal of plastic and other waste on our environment.
-            <span class="about-motto">Refuse, Reduce, Reuse and Recycle is our motto</span>
+          <p class="about-text" data-aos="fade-up" data-aos-delay="200">Vijay Social Welfare Society
+            ...</p><br>
+          <p class="about-text" data-aos="fade-up" data-aos-delay="300">...</p><br>
+          <p class="about-text" data-aos="fade-up" data-aos-delay="400">...
+            <span class="about-motto">Quote</span>
           </p>
         </div>
         <div class="col-lg-7 d-flex justify-content-center d-none d-lg-block" data-aos="fade-up" data-aos-delay="200">
           <div class="row justify-content-center align-items-center about-imgs">
             <div class="d-flex align-items-center abt-img-wrapper about-img-wrapper-vertical">
-              <img class="img-fluid" src="./content/For Carousel/about.jpeg" alt="">
+              <img class="img-fluid" src="./content/For Carousel/download.jpg" alt="">
             </div>
             <div class="d-flex align-items-center abt-img-wrapper w-50">
-              <img class="img-fluid" src="./content//For Carousel/img1.jpeg" alt="">
+              <img class="img-fluid" src="./content//For Carousel/download (1).jpg" alt="">
             </div>
             <div class="d-flex align-items-center abt-img-wrapper w-50">
-              <img class="img-fluid" src="./content//For Carousel/img2.jpeg" alt="">
+              <img class="img-fluid" src="./content//For Carousel/download (2).jpg" alt="">
             </div>
           </div>
         </div>
@@ -195,27 +184,23 @@
       </div>
       <div class="row justify-content-center my-3">
         <div class="col-md-5 px-5">
-          <img src="./content/For acheivements/certificate.jpeg" alt="certificate" class="img-fluid">
+          <img src="./content/For acheivements/download (1).png" alt="certificate" class="img-fluid">
         </div>
         <div class="col-md-6 pt-3 ps-5 d-flex flex-column about-text">
-          <h3 class="mt-2"><strong>1<sup>st</sup> Position in 'MAJHI VASUNDHARA ABHIYAN</strong></h3>
-          <p>Anti Plastic Brigade Charitable Trust and its Green Brigadiers were appreciated for their
-            tireless efforts in SWM & convincing people about importance of RECYCLING. In June 2020 they
-            were awarded with certificate of appreciation as TMC secured 1st position in 'MAJHI VASUNDHARA
-            ABHIYAN 2020-21' in MAHARASHTRA</p>
+          <h3 class="mt-2"><strong>1<sup>st</sup> Position in ...</strong></h3>
+          <p>description</p>
         </div>
       </div>
       <div class="row my-3" data-aos="fade-up" data-aos-delay="200">
         <div class="col-md-6 pt-3 ps-5 d-flex flex-column about-text">
           <h3 class="mt-2"><strong>Media Recongnition</strong></h3>
-          <p>News papers like Maharashtra Times, Lokmat, Hindustan Times along with News Channels such as ABP
-            Maza have taken coginzance of the green efforts of our organization</p>
+          <p>which media, newspapers, etc. have reported about us? (description)</p>
         </div>
         <div class="col-md-6 d-flex align-items-center">
           <div class="swiper mySwiper">
             <div class="swiper-wrapper">
               <div data-history="1" class="swiper-slide"><img class="paper-horizontal"
-                  src="./content/For acheivements/MT1.jpeg" alt=""></div>
+                  src="./content/For acheivements/images.jpg" alt=""></div>
               <div data-history="Slide 2" class="swiper-slide"><img class="paper-horizontal"
                   src="./content/For acheivements/MT2.jpeg" alt=""></div>
               <div data-history="3" class="swiper-slide"><img class="paper-vertical"
@@ -246,35 +231,29 @@
         <div class="col-lg-6" data-aos="fade-up" data-aos-delay="100">
           <div class="box">
             <div class="icon"><i class="bi bi-broadcast-pin"></i></div>
-            <h4 class="title"><a href="">Awareness Programs</a></h4>
-            <p class="description">We conduct awareness programs to alert people about the adverse effects on
-              the environement due to excessive use of plastic and its incorrect disposal especially of
-              the plasti bags and making available cloth bags as an alternative to it.</p>
+            <h4 class="title"><a href="">What We Do #1</a></h4>
+            <p class="description">text</p>
           </div>
         </div>
         <div class="col-lg-6" data-aos="fade-up" data-aos-delay="200">
           <div class="box">
             <div class="icon"><i class="bi bi-archive"></i></div>
-            <h4 class="title"><a href="">Waste Collection Drives</a></h4>
-            <p class="description">Conduct waste collection and segregation drives for proper disposal of
-              the WET, DRY and HAZARDOUS waste along with Clean and Dry Plastic waste, Thermocol and
-              E-Waste Collection Drives. We also encourage people to compost their wet waste.</p>
+            <h4 class="title"><a href="">What We Do #2</a></h4>
+            <p class="description">text</p>
           </div>
         </div>
         <div class="col-lg-6" data-aos="fade-up" data-aos-delay="300">
           <div class="box">
             <div class="icon"><i class="bi bi-tree"></i></i></div>
-            <h4 class="title"><a href="">Plantation Drives</a></h4>
-            <p class="description">Conduct Plantation Drives and year long lectures on Home Gardening and
-              Biodiversity programs.</p>
+            <h4 class="title"><a href="">What We Do #3</a></h4>
+            <p class="description">text</p>
           </div>
         </div>
         <div class="col-lg-6" data-aos="fade-up" data-aos-delay="400">
           <div class="box">
             <div class="icon"><i class="bi bi-binoculars"></i></div>
-            <h4 class="title"><a href="">Nature Trails</a></h4>
-            <p class="description">Organise Nature Trails, Field Trips and other environment related
-              activities.</p>
+            <h4 class="title"><a href="">What We Do #4</a></h4>
+            <p class="description">text</p>
           </div>
         </div>
       </div>
@@ -296,10 +275,7 @@
     <div class="container">
       <div class="row">
         <div class="col-md-6 d-flex flex-column justify-content-center about-text-wrapper" data-aos="fade-up">
-          <p class="about-text initiatives-info">We conduct various awareness programs on Solid Waste Management,
-            Weekly Thermacol and Fortnightly Clean and Dry waste collection drives, Under APB's Green Study Tour we go
-            on field trips and nature walks with our volunteers
-            to learn and get hands on experience of various techniques
+          <p class="about-text initiatives-info">description/summary
           </p>
           <a href="initiatives-section.html" class="button--link">
             KNOW MORE
@@ -308,7 +284,7 @@
           </a>
         </div>
         <div class="col-md-6" data-aos="fade-up">
-          <img style="width: 80%;" class="initiatives-img" src="./content/initiatives/initiatives.png" alt="">
+          <img style="width: 80%;" class="initiatives-img" src="./content/initiatives/download.png" alt="">
         </div>
       </div>
     </div>
@@ -330,23 +306,23 @@
       <div class="row">
         <div class="col-lg-4 col-md-6 d-flex flex-column align-items-stretch">
           <div class="member">
-            <img src="content\teams\hetal apbc_adobespark.jfif" alt="">
-            <h4>Hetal Gala</h4>
-            <span>President and Trustee</span>
+            <img src="content\teams\download.png" alt="">
+            <h4>P1</h4>
+            <span>Position 1</span>
           </div>
         </div>
         <div class="col-lg-4 col-md-6 d-flex flex-column align-items-stretch">
           <div class="member">
-            <img src="content\teams\apbc_team_3_remove_bg-removebg-preview_adobespark.png" alt="">
-            <h4>Anuja Gupte</h4>
-            <span>Trustee</span>
+            <img src="content\teams\download.png" alt="">
+            <h4>P2</h4>
+            <span>Position 2</span>
           </div>
         </div>
         <div class="col-lg-4 col-md-6 d-flex flex-column align-items-stretch">
           <div class="member">
-            <img src="content\teams\vikas.png" alt="">
-            <h4>Vikas Desai</h4>
-            <span>Trustee</span>
+            <img src="content\teams\download.png" alt="">
+            <h4>P3</h4>
+            <span>Position 3</span>
           </div>
         </div>
       </div>
@@ -368,31 +344,28 @@
           <i class="bi bi-envelope"></i>
           Email:
           <a href="mailto:antiplastic.brigade@gmail.com" target="_blank"
-            rel="noopener noreferrer">antiplastic.brigade@gmail.com</a>
+            rel="noopener noreferrer">vswsindore@gmail.com</a>
           <br>
           <i class="bi bi-phone"></i>
-          Phone: <a href="tel:+919870083455">+91 9870083455</a>
+          Phone: <a href="tel:+919870083455">+91 9300774806</a>
           <br>
           <div class="social-links my-2">
-            <a href="https://twitter.com/apbthane"><i class="bi bi-twitter"></i></a>
-            <a href="https://www.instagram.com/antiplasticbrigade2018/"><i class="bi bi-instagram"></i></a>
-            <a href="https://www.facebook.com/groups/550907531994117/"><i class="bi bi-facebook"></i></a>
+            <a href="https://x.com/vswsindore"><i class="bi bi-twitter"></i></a>
+            <a href="https://www.instagram.com/vijay_foundation4/?hl=en"><i class="bi bi-instagram"></i></a>
+            <a href="https://www.facebook.com/vsws.org"><i class="bi bi-facebook"></i></a>
+            <a href="https://www.linkedin.com/company/vijay-social-welfare-society/"><i class="bi bi-linkedin"></i></a>
           </div>
         </div>
         <div class="col-sm-6 my-2">
           <h4>Location</h4>
           <div class="d-flex justify-content-center">
             <i class="bi bi-geo-alt"></i>
-            <address>Thane</address>
+            <address>Indore</address>
           </div>
         </div>
       </div>
       <div class="row">
-        <a href="#">© 2021, Anti Plastic Brigade Charitable Trust</a>
-        <a class="mt-3" href="https://sevatech.dbit.in/" target="_blank" rel="noopener noreferrer">
-          Designed and Developed by<br />
-          <img class="footer-sevatech-logo" src="content/sevatech logo.webp" />
-        </a>
+        <a href="#">© <script>document.write(new Date().getFullYear());</script>, Vijay Social Welfare Society</a>
       </div>
     </div>
   </footer>
