--- a/index.html
+++ b/index.html
@@ -8,7 +8,11 @@
   <meta name="keywords" content="APBCT, Anti Plastic Brigade Charitable Trust, Thane, NGO">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="shortcut icon" href="./content/favicon.png" type="image/x-icon">
+  <!-- Favicon -->
+  <link rel="icon" href="favicon.png">
+  <link rel="shortcut icon" href="favicon.png">
+  <link rel="apple-touch-icon" href="content/favicon.png">
+  <link rel="icon" type="image/png" href="content/favicon.png">
 
   <title>Vijay Social Welfare Society</title>
 
