Enhance content in index.html to provide a comprehensive overview of Vijay Social Welfare Society's mission and vision

--- a/index.html
+++ b/index.html
@@ -107,11 +107,10 @@
     <div class="container">
       <div class="row">
         <div class="col-lg-5 d-flex flex-column justify-content-center about-text-wrapper">
-          <p class="about-text" data-aos="fade-up" data-aos-delay="200">Vijay Social Welfare Society
-            ...</p><br>
-          <p class="about-text" data-aos="fade-up" data-aos-delay="300">...</p><br>
-          <p class="about-text" data-aos="fade-up" data-aos-delay="400">...
-            <span class="about-motto">Quote</span>
+          <p class="about-text" data-aos="fade-up" data-aos-delay="200">VSWS was founded in the loving memory of Shri Vijay Shanker Tare, a selfless social worker who devoted his life to serving others. Under the leadership of Smt. Tilottama Tare, the Society works tirelessly to support marginalized children and women, helping them access education, health services, and the skills to build better futures.</p><br>
+          <p class="about-text" data-aos="fade-up" data-aos-delay="300">We believe that education is the most powerful tool for social change. At VSWS, we strive to end child labor and promote literacy by bringing children into classrooms, not landfills. Our goal is to raise responsible, empowered individuals who lead their communities with integrity and compassion.</p><br>
+          <p class="about-text" data-aos="fade-up" data-aos-delay="400">
+            <span class="about-motto">Our vision is to create a society where childhood is joyful, womanhood is empowered, and the environment is respected. Our mission is to drive awareness and action around social and ecological issues, enabling the deprived to realize their full potential through education, care, and community support.</span>
           </p>
         </div>
         <div class="col-lg-7 d-flex justify-content-center d-none d-lg-block" data-aos="fade-up" data-aos-delay="200">
