--- a/index.html
+++ b/index.html
@@ -116,13 +116,13 @@
         <div class="col-lg-7 d-flex justify-content-center d-none d-lg-block" data-aos="fade-up" data-aos-delay="200">
           <div class="row justify-content-center align-items-center about-imgs">
             <div class="d-flex align-items-center abt-img-wrapper about-img-wrapper-vertical">
-              <img class="img-fluid" src="./content/For Carousel/download.jpg" alt="">
+              <img class="img-fluid" src="./content/For Carousel/akksharproject2.jpg" alt="">
             </div>
             <div class="d-flex align-items-center abt-img-wrapper w-50">
-              <img class="img-fluid" src="./content//For Carousel/download (1).jpg" alt="">
+              <img class="img-fluid" src="./content//For Carousel/nirogproject3.jpeg" alt="">
             </div>
             <div class="d-flex align-items-center abt-img-wrapper w-50">
-              <img class="img-fluid" src="./content//For Carousel/download (2).jpg" alt="">
+              <img class="img-fluid" src="./content//For Carousel/UdayProject1.jpg" alt="">
             </div>
           </div>
         </div>
