Revise content and structure in index.html and initiatives-section.html to reflect updated initiatives and enhance user engagement. Update CSS styles for improved visual consistency across sections.

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
     <div class="menu" id="nav-menu">
       <a href="#home">HOME</a>
       <a href="#about">ABOUT US</a>
-      <a href="#achievements">ACHEIVEMENTS</a>
+      <a href="#achievements">IMPACT</a>
       <a href="#services">WHAT WE DO</a>
       <a href="initiatives-section.html">OUR INITIATIVES</a>
       <a href="#team">TEAM</a>
@@ -156,33 +156,25 @@
       </svg>
     </div>
     <div class="section-title-secondary">
-      <h1>Achievements</h1>
+      <h1>Impact</h1>
     </div>
     <div class="container">
       <div class="row justify-content-center numerical-data" data-aos="fade-up" data-aos-delay="200">
-        <div class="col-md-4 col-6">
-          <h2><span class="counter">38</span>k+ kgs</h2>
-          <p>Dry waste collected</p>
+        <div class="col-md-6 col-6">
+          <h2><span class="counter">100</span>+ Children</h2>
+          <p>Enrolled in private schools through our education sponsorship programs</p>
         </div>
-        <div class="col-md-4 col-6">
-          <h2><span class="counter">2.5</span>k+ kgs</h2>
-          <p>Thermocol collected</p>
+        <div class="col-md-6 col-6">
+          <h2><span class="counter">40</span>+ Women</h2>
+          <p>Trained in vocational skills that enable economic independence</p>
         </div>
-        <div class="col-md-4 col-6">
-          <h2><span class="counter">725</span>k+ kgs</h2>
-          <p>E-waste collected</p>
+        <div class="col-md-6 col-6 mt-4">
+          <h2><span class="counter">15</span>+ Workshops</h2>
+          <p>Conducted community workshops on health, hygiene, sustainability, and literacy</p>
         </div>
-        <div class="col-md-4 col-6">
-          <h2><span class="counter">140</span>+</h2>
-          <p>Collection Drives</p>
-        </div>
-        <div class="col-md-4 col-6">
-          <h2><span class="counter">125</span>+</h2>
-          <p>Collaborations with socities</p>
-        </div>
-        <div class="col-md-4 col-6">
-          <h2><span class="counter">100</span>+</h2>
-          <p>Volunteers</p>
+        <div class="col-md-6 col-6 mt-4">
+          <h2><span class="counter">1</span> Shared Belief</h2>
+          <p>That small, consistent acts of kindness can change the world</p>
         </div>
       </div>
       <div class="row justify-content-center my-3">
@@ -233,30 +225,30 @@
       <div class="row gy-4">
         <div class="col-lg-6" data-aos="fade-up" data-aos-delay="100">
           <div class="box">
-            <div class="icon"><i class="bi bi-broadcast-pin"></i></div>
-            <h4 class="title"><a href="">What We Do #1</a></h4>
-            <p class="description">text</p>
+            <div class="icon"><i class="bi bi-book"></i></div>
+            <h4 class="title"><a href="">Education for Underprivileged Children</a></h4>
+            <p class="description">We believe that no child should be denied the chance to learn. Our team identifies children forced into child labour — including rag picking — and helps transition them into schools. We provide academic support, life skills training, and moral education to ensure they not only attend school but thrive in it.</p>
           </div>
         </div>
         <div class="col-lg-6" data-aos="fade-up" data-aos-delay="200">
           <div class="box">
-            <div class="icon"><i class="bi bi-archive"></i></div>
-            <h4 class="title"><a href="">What We Do #2</a></h4>
-            <p class="description">text</p>
+            <div class="icon"><i class="bi bi-briefcase"></i></div>
+            <h4 class="title"><a href="">Women’s Empowerment</a></h4>
+            <p class="description">We offer skill development programs, vocational training, and awareness sessions to equip women with the tools to become financially independent. Our focus is on building confidence, resilience, and leadership from the ground up.</p>
           </div>
         </div>
         <div class="col-lg-6" data-aos="fade-up" data-aos-delay="300">
           <div class="box">
-            <div class="icon"><i class="bi bi-tree"></i></i></div>
-            <h4 class="title"><a href="">What We Do #3</a></h4>
-            <p class="description">text</p>
+            <div class="icon"><i class="bi bi-pencil-square"></i></div>
+            <h4 class="title"><a href="">Adult Literacy and Life Skills</a></h4>
+            <p class="description">Our adult literacy initiatives teach reading, writing, spoken English, and essential knowledge around health, hygiene, and etiquette. These programs help individuals build confidence and self-worth, and open doors to better employment opportunities.</p>
           </div>
         </div>
         <div class="col-lg-6" data-aos="fade-up" data-aos-delay="400">
           <div class="box">
-            <div class="icon"><i class="bi bi-binoculars"></i></div>
-            <h4 class="title"><a href="">What We Do #4</a></h4>
-            <p class="description">text</p>
+            <div class="icon"><i class="bi bi-tree"></i></div>
+            <h4 class="title"><a href="">Environmental Action</a></h4>
+            <p class="description">We actively promote sustainable, eco-friendly practices. From awareness drives to local clean-up activities, we strive to instill environmental responsibility in the communities we serve — because a better world must also be a greener one.</p>
           </div>
         </div>
       </div>
